--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     },
     "autoload": {
         "psr-4": {
-            "eNotasGW\\Api\\": "src/"
+            "eNotas\\Api\\": "src/"
         }
     }
 }
